--- a/.travis.yml
+++ b/.travis.yml
@@ -1,55 +1,17 @@
-branches:
-  except:
-    - donttestme
-
 language: bash
-
-sudo: required
-
+os: linux
+dist: xenial
 env:
   global:
-    - HADOLINT_VERSION=1.18.0
-    - SHELLCHECK_VERSION=0.7.1
-    - ECLINT_VERSION=2.1.0
-
-addons:
-  apt:
-    packages:
-      - xz-utils
-
-services:
-  - docker
+    - DOCKER_REPO=andreasfaerber/tomav-docker-mailserver
 
 before_install:
-  # HADOLINT
-  - sudo curl -L https://github.com/hadolint/hadolint/releases/download/v${HADOLINT_VERSION}/hadolint-$(uname -s)-$(uname -m) -o /usr/local/bin/hadolint
-  - sudo chmod +rx /usr/local/bin/hadolint
-  # SHELLCHECK
-  - sudo wget -qO- "https://github.com/koalaman/shellcheck/releases/download/v${SHELLCHECK_VERSION}/shellcheck-v${SHELLCHECK_VERSION}.linux.x86_64.tar.xz" | tar -xJ
-  - sudo mv "shellcheck-v${SHELLCHECK_VERSION}/shellcheck" /usr/bin/
-  # ECLINT
-  - sudo wget -qO- "https://github.com/editorconfig-checker/editorconfig-checker/releases/download/${ECLINT_VERSION}/ec-linux-amd64.tar.gz" | tar -xaz
-  - sudo mv bin/ec-linux-amd64 /usr/bin/eclint
-  - sudo chmod +x /usr/bin/eclint
-
+  - curl -fsSL https://get.docker.com | sh
+  - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
+  - mkdir -p $HOME/.docker
+  - echo '{"experimental":"enabled"}' | sudo tee $HOME/.docker/config.json
+  - sudo service docker start
 install:
-  - travis_retry travis_wait make build
-
-script:
-  - make eclint
-  - make hadolint
-  - make shellcheck
-  - make generate-accounts tests
-
-after_script:
-  - make clean
-
-notifications:
-  slack:
-    secure: TTo1z9nbZCWcIdfPwypubNa3y+pwvfgDGlzEVAGEuK7uuIpmEoAcAUNSSPTnbewDGHnDl8t/ml93MtvP+a+IVuAKytMqF39PHyoZO7aUl9J62V+G75OmnyGjXGJm40pQosCS6LzqoRRYXotl9+fwH568Kf4ifXCrMZX1d+ir7Ww=
-  webhooks:
-    on_success: always
-    on_failure: always
-    on_start: never
-    urls:
-      - https://webhooks.gitter.im/e/7ec65291bfb4bf1f8518
+  - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+  - docker buildx create --name xbuilder --use
+script: bash ci.sh
